tests/dataset/tpc-ds/compiler/kotlin/q96.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q96.kt:24:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_store_name: String)
           ^
/tmp/q96.kt:28:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_store_name: String)
           ^
